appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Don't Show Again"

#Login
- tapOn: 
    id: ${MENU_BUTTON}
- tapOn: ${MENU_LOGIN}
- assertVisible: 
    id: ${USERNAME_FIELD}
- tapOn:
    id: ${USERNAME_FIELD}
- inputText: ""
- tapOn:
    id: ${PASSWORD_FIELD}
- inputText: ""
- tapOn: 
    id: ${LOGIN_BUTTON}
- assertVisible:
    id: ${USERNAME_ALERT}
