appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Don't Show Again"

#Login
- tapOn: 
    id: ${MENU_BUTTON}
- tapOn: ${MENU_LOGIN}
- tapOn:
    id: ${USERNAME_FIELD}
- inputText: "bod@example.com"
- tapOn:
    id: ${PASSWORD_FIELD}
- inputText: "10203040"
- tapOn: ${LOGIN_BUTTON}

- assertVisible: 
    id: ${PRODUCTS_TITLE}