appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Don't Show Again"

#Product selection
- assertVisible: "Sauce Labs Backpack"
- tapOn: ${PRODUCT_IMAGE}

#Add items to cart
- assertVisible: "Sauce Labs Backpack"
- tapOn: 
    id: ${INCREASE_ITEM_QUANTITY}
- assertVisible: "2"
- tapOn:
    id: ${ADD_TO_CART}
- tapOn:
    id: ${VIEW_CART}

- assertVisible: ${ITEM_QUANTITY_2}