appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Don't Show Again"

#Login
- tapOn: 
    id: ${MENU_BUTTON}
- tapOn: ${MENU_LOGIN}
- tapOn:
    id: ${USERNAME_FIELD}
- inputText: "bod@example.com"
- tapOn:
    id: ${PASSWORD_FIELD}
- inputText: "10203040"
- tapOn: ${LOGIN_BUTTON}

#Product selection
- assertVisible: 
    id: ${PRODUCTS_TITLE}
- assertVisible: "Sauce Labs Backpack"
- tapOn: ${PRODUCT_IMAGE}

#Add item to cart
- assertVisible: "Sauce Labs Backpack"
- tapOn: 
    id: ${ADD_TO_CART}
- tapOn: 
    id: ${VIEW_CART}

- assertVisible: ${ITEM_QUANTITY_1}
- tapOn: "Proceed To Checkout"

#Empty shipping information
- scrollUntilVisible:
    element: ${TO_PAYMENT_BUTTON}
- tapOn: ${TO_PAYMENT_BUTTON}

#Validation feedback
- assertVisible: 
    id: ${FULL_NAME_ERROR}
- assertVisible: 
    id: ${ADDRESS_LINE_1_ERROR}
- assertVisible:
    id: ${CITY_ERROR}
- assertVisible: 
    id: ${ZIP_CODE_ERROR}
- assertVisible: 
    id: ${COUNTRY_ERROR}