appId: ${APP_ID}
---
- launchApp:
    clearState: true

- tapOn: "Don't Show Again"

#Product selection
- assertVisible: "Sauce Labs Backpack"
- tapOn: ${PRODUCT_IMAGE}

#Product details
- assertVisible: "Sauce Labs Backpack"
- assertVisible: "$ 29.99"
- tapOn: "Black color"
- scrollUntilVisible:
    element: "carry.allTheThings() with the sleek, streamlined Sly Pack that melds uncompromising style with unequaled laptop and tablet protection."
